ingress/ingress-host-store.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-front-ingress
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  ingressClassName: azure-application-gateway

  rules:
    - host: neurostack-agw.celanese.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-front
                port:
                  number: 80
